# openclaw_auto

./: .gitignore  CHANGELOG.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: release-notes-v2.0.0.md  release-notes-v2.0.1.md  release-notes-v2.0.2.md  release-notes-v2.0.3.md
docs/release-notes/: v0.1.3.md  v0.1.4.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.5.0.md  v0.6.0.md  v2.1.0.md  v2.2.0.md
docs/specs/: architecture-breakdown-openclaw-manager-v2.md  refactor-plan-v2.md  (+16 more)
scripts/: with-rust-win.cmd  with-rust.mjs
src/: AppRuntime.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/adapters/: file_ops.rs  mod.rs  openclaw.rs  platform.rs  shell.rs
src-tauri/src/commands/: admin.rs  agent.rs  channel.rs  config.rs  connectivity.rs  cron.rs  env.rs  gateway.rs  install.rs  instance.rs  logs.rs  mod.rs  overview.rs  provider.rs  runbook.rs  settings.rs
src-tauri/src/models/: error.rs  result.rs
src-tauri/src/services/: admin_service.rs  agent_service.rs  channel_service.rs  config_service.rs  connectivity_service.rs  cron_service.rs  env_service.rs  gateway_api_service.rs  gateway_service.rs  install_issue.rs  install_service.rs  instance_service.rs  log_service.rs  mod.rs  overview_service.rs  provider_service.rs  runbook_service.rs  settings_service.rs
(+377 files in other folders)
