[package]
name = "clawdesk"
version = "2.0.4"
description = "ClawDesk Desktop Controller"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
